# Support-IT-Viewer-migration

./: RAPPORT_PFE_REMOTE_IT_SUPPORT.md  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  check_errors.txt  tauri.conf.json  webrtc.diff  webrtc2.diff
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: auth.rs  desktop_duplication.rs  file_transfer.rs  input_handler.rs  media_foundation_encoder.rs  metrics.rs  mod.rs  screen_capture.rs  session.rs  signaling.rs  video_encoder.rs  webrtc.rs
src-tauri/target-check-temp/: .rustc_info.json
src-tauri/target-check-temp/debug/.fingerprint/adler2-1e5ec3f8b15c65bb/: lib-adler2  lib-adler2.json
src-tauri/target-check-temp/debug/.fingerprint/adler2-34a05c127a9ca517/: lib-adler2  lib-adler2.json
src-tauri/target-check-temp/debug/.fingerprint/aead-8bb7f59a0dbd510b/: lib-aead  lib-aead.json
src-tauri/target-check-temp/debug/.fingerprint/aes-25b0170d1b4cd9a3/: lib-aes  lib-aes.json
src-tauri/target-check-temp/debug/.fingerprint/aes-gcm-9c5cb70a91552f17/: lib-aes_gcm  lib-aes_gcm.json
src-tauri/target-check-temp/debug/.fingerprint/aho-corasick-48ae2318f3aaed8a/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-check-temp/debug/.fingerprint/aho-corasick-f0fe46c1b6108001/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-check-temp/debug/.fingerprint/alloc-no-stdlib-146160a651e2cf3d/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-check-temp/debug/.fingerprint/alloc-no-stdlib-f5d923a658023094/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-check-temp/debug/.fingerprint/alloc-stdlib-5e73a110d804fb3e/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-check-temp/debug/.fingerprint/alloc-stdlib-b5b8502ac9bf8ff1/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-check-temp/debug/.fingerprint/anyhow-01bb5f29022addc0/: lib-anyhow  lib-anyhow.json
src-tauri/target-check-temp/debug/.fingerprint/anyhow-9c61e8388b25f952/: run-build-script-build-script-build  run-build-script-build-script-build.json
(+1499 files in other folders)
