[package]
name = "lumiere-tech-it"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumiere_tech_it_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }

# ── HTTP client (remplace HttpClient C#) ──────────────────────────
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Async runtime (remplace Task/async-await C#) ──────────────────
tokio = { version = "1", features = ["full"] }

# ── WebSocket client (remplace ClientWebSocket C#) ────────────────
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
webrtc = "0.11"
rtp = "0.11"
bytes = "1"
screenshots = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
openh264 = "0.6"

# ── Encoding ──────────────────────────────────────────────────────
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"

# ── Windows APIs : DXGI (screen capture) + user32 (input) ─────────
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    # user32 — mouse_event, SetCursorPos, keybd_event, VkKeyScan
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    # DXGI — Desktop Duplication (ScreenCapture)
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
] }

